# Hybrid-search-for-E-commerce

./: .dockerignore  .gitignore  AvoidDockerIssue.md  Dockerfile.backend  Dockerfile.frontend  ProjectStructureDiagram.txt  README.md  check_torch.py  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  ingest_movies_optimized.py  pyproject.toml  requirements.txt
app/: __init__.py  database.py  main.py  models.py
frontend/src/: App.css  App.js  AskModal.js
nginx/: default.conf
